--- a/succ.html
+++ b/succ.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Main Page</title>
+  <title>Success</title>
 </head>
 <body>
-  <h1>Welcome to the Main Page</h1>
-  <p>Try to find the hiden page</p>
+  <h2>Congratulations!</h2>
+  <p>You have successfully accessed the hidden page!</p>
 </body>
 </html>
-
-
